--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,1 +1,21 @@
 @import "../../public/assets/sass/styles.scss"; 
+
+/* Custom scrollbar styles */
+::-webkit-scrollbar {
+    width: 9px;
+    height: 5px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: #000000;
+    border-radius: 0px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.322);
+    border-radius: 10px;
+  }
+  
+  
+  
+  
